<resources>
    <string name="app_name">CaloriaFit</string>
    <string name="imc">IMC</string>
    <string name="tmd">TMD</string>
    <string name="imc_desc">IMC é a sigla para Indice de Masa Corporal que serve para avaliar o peso do individuo em
        relacão à sua altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso
        desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC
    </string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="calc">Calcular</string>
    <string name="fields_message">Todos os campos deve serem maiores que zero</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acime do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="tmb_response">Tmb: %1$.2f</string>

    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso!</string>
    <string name="result">resultado: %.2f, data: %s</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">O TMB é cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu
        estilo de vida
    </string>
    <string name="age">Idade</string>
    <string name="caloria">cal %.2f</string>
    <string name="title_delete">Deletar dado</string>
    <string name="mesage_delete">TÊm certeza que deseja excluir esse dado?</string>
    <string name="delete">Deletar</string>
</resources>
