<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".TmbActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmb_desc"
                style="@style/TextViewForm"/>

        <EditText
                android:id="@+id/tmbWeight"
                style="@style/EditTextForm"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/weight"/>

        <EditText
                android:id="@+id/tmbHeight"
                style="@style/EditTextForm"
                android:maxLength="3"
                android:inputType="number"
                android:hint="@string/height"/>

        <EditText
                android:id="@+id/tmbAge"
                style="@style/EditTextForm"
                android:maxLength="3"
                android:inputType="number"
                android:hint="@string/age"/>

        <Spinner
                android:id="@+id/tmbLifeStyle"
                style="@style/SpinnerForm"
                android:entries="@array/tmb_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <Button
                android:id="@+id/tmbSend"
                style="@style/ButtonForm"
                android:text="@string/calc"
        />

    </LinearLayout>
</ScrollView>