<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".ImcActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc_desc"
                style="@style/TextViewForm"/>

        <EditText
                android:id="@+id/imcWeight"
                style="@style/EditTextForm"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/weight"/>

        <EditText
                android:id="@+id/imcHeight"
                style="@style/EditTextForm"
                android:maxLength="3"
                android:inputType="number"
                android:hint="@string/height"/>


        <Button
                android:id="@+id/imcSend"
                style="@style/ButtonForm"
                android:text="@string/calc"
        />

    </LinearLayout>
</ScrollView>